syntax = "proto3";

package com.example.internalapi.request.book_presence.get_all_by_library_id.proto;

option java_multiple_files = true;

import "com/example/internalapi/model/book_presence.proto";

message GetAllBooksByLibraryIdRequest {
  string library_id = 1;

}

message GetAllBooksByLibraryIdResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    example.internalapi.model.BookPresenceList book_presences = 1;
  }

  message Failure {
    string message = 100;
  }
}
